# numcpp

./: .gitignore  CMakeLists.txt  Doxygen  LICENSE.md  README.md  index.html  params.json
doc/: abstractarray_8h_source.html  annotated.html  annotated.js  arithmetic_8h_source.html  array_8h_source.html  array_functions_8h_source.html  base_8h_source.html  basearray_8h_source.html  clapack_8h_source.html  classes.html  classnumcpp_1_1_abstract_array-members.html  classnumcpp_1_1_abstract_array.html  classnumcpp_1_1_abstract_strided_array-members.html  classnumcpp_1_1_abstract_strided_array.html  classnumcpp_1_1_array-members.html  classnumcpp_1_1_array.html  classnumcpp_1_1_non_regular_array-members.html  classnumcpp_1_1_non_regular_array.html  classnumcpp_1_1_strided_array-members.html  classnumcpp_1_1_strided_array.html  classnumcpp_1_1_strided_array.js  color_8h_source.html  command_table.html  complex_8h_source.html  concept.html  config_8h_source.html  constants_8h_source.html  core_2extern_8h_source.html  core_8h_source.html  core_func_8h_source.html  decomp_8h_source.html  decompositions_8h_source.html  defines_8h_source.html  diag_8h_source.html  dir_06747b55072bb4a9dfdee3f9c922e290.html  dir_10a17839c865e9a96e7aad24abf23d32.html  dir_367ba2ab5a2c45f55821dc30d264fb0a.html  dir_3a099247b34a465232d2724e96d6391b.html  dir_9c51ae832565764ff9273549482bd0ea.html  dir_caa12be9716347ea0e007c55c1bdf5cb.html  (+118 more)
doc/dox/: commandTable.dox  concept.dox  examples.dox  installation.dox  main.dox  performance.dox  tutorial.dox
doc/images/: shepp_logan_phantom.xcf
doc/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_7a.js  classes_61.js  classes_63.js  classes_6e.js  classes_73.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_69.js  functions_6c.js  functions_6d.js  functions_6e.js  functions_6f.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  groups_62.js  groups_63.js  groups_64.js  groups_66.js  groups_69.js  (+23 more)
doc/sphinx/: api.rst  api_base.rst  api_core.rst  commandTable.rst  concept.rst  conf.py  examples.rst  index.rst  performance.rst  tutorial.rst
doc/sphinx/.templates/: layout.html
examples/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  mpiReco.cpp  shepp_logan_phantom.h5  test
examples/test.dSYM/Contents/Resources/DWARF/: test
numcpp/: CMakeLists.txt  Doxyfile  Doxyfile2  base.h  core.h  io.h  numcpp.h  transformations.h
numcpp/base/: CMakeLists.txt  arrayFunctions.h  color.h  initializers.h  special.h
numcpp/core/: CMakeLists.txt  abstractarray.h  array.h  constants.h  defines.h  iterator.h  memoryblock.h  operators.h  slice.h  utils.h
numcpp/io/: CMakeLists.txt  file.h  hdf5.h  image.h
numcpp/numcpp/: CMakeLists.txt  base.h  config.h  core.h  expressions.h  extern.cpp  fft.h  graphics.h  interpolation.h  io.h  linalg.h  numcpp.cpp  solvers.h  sparse.h  tomography.h  wavelet.h
numcpp/numcpp/base/: CMakeLists.txt  arrayFunctions.h  base.cpp  color.cpp  color.h  diag.h  exponential.h  filter.h  hyperbolic.h  initializers.cpp  initializers.h  linalg.h  minMax.h  norms.h  products.h  random.cpp  random.h  rearrangeArray.h  rounding.h  signal.h  sort.cpp  sort.h  special.h  statistics.h  sums.h  trigonometric.h
numcpp/numcpp/core/: CMakeLists.txt  abstractarray.h  abstractexpression.h  arithmetic.h  array.h  basearray.h  complex.h  constants.h  core.cpp  coreFunc.cpp  coreFunc.h  defines.h  dyndimarray.h  dyntypearray.cpp  dyntypearray.h  extern.h  iterator.h  logical.h  memoryblock.cpp  memoryblock.h  nonregulararray.h  relational.h  slice.cpp  slice.h  stream.h  stridedarray.h  type.cpp  type.h  utils.cpp  utils.h
numcpp/numcpp/expressions/: CMakeLists.txt  arithmetic.h  functions.h  relational.h
numcpp/numcpp/fft/: CMakeLists.txt  extern.h  fft.cpp  fft.h  fftpack.h  fftpack_wrapper.cpp  fftw.cpp  fftw.h  fftw_wrapper.cpp  nfft.cpp  nfft.h  wavelet.h
numcpp/numcpp/graphics/: CMakeLists.txt  image.cpp  image.h  plot.h
numcpp/numcpp/interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.h
numcpp/numcpp/io/: CMakeLists.txt  file.cpp  file.h  hdf5.cpp  hdf5.h  io.cpp
numcpp/numcpp/linalg/: CMakeLists.txt  decomp.h  f2c.h  lapack.h  linalg.cpp  solver.cpp  solver.h
numcpp/numcpp/solvers/: CMakeLists.txt  decompositions.h  iterativeLinearSolvers.h
numcpp/numcpp/sparse/: CMakeLists.txt  sparseMatrix.h  sparseVector.h
numcpp/numcpp/tomography/: CMakeLists.txt  radon.cpp  radon.h  tomography.cpp
numcpp/numcpp/transformations/: fftw.h  nfft.h
numcpp/numcpp/wavelet/: CMakeLists.txt  wavelet.h
numcpp/solvers/: iterativeLinearSolvers.h
numcpp/transformations/: CMakeLists.txt  fftw.h
performance/: CMakeLists.txt  performance01.cpp  performance01.jl  performance01.py  performance02.cpp  performance03.cpp  performance04.cpp  performanceBlitz.cpp  performanceEigen.cpp  performanceNFFT.cpp  performanceNumcpp.cpp  performanceNumpy.py  run_performance_tests.py  test  testE
performance/test.dSYM/Contents/Resources/DWARF/: test
performance/testE.dSYM/Contents/: Info.plist
performance/testE.dSYM/Contents/Resources/DWARF/: testE
tests/: CMakeLists.txt  base.cpp  core.cpp  externTemplate.cpp  externTemplate.h  externTemplateMain.cpp  fft.cpp  io.cpp  linalg.cpp  main.cpp  simpleTest.cpp  solvers.cpp  sparse.cpp  test  test.h5  testEigen.cpp  testNumpy.jl  testNumpy.py  wavelet.cpp
tests/test.dSYM/Contents/Resources/DWARF/: test
